--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "com.codingwithmitch.mvvmrecipeapp"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -26,7 +28,20 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = "1.8"
+    }
+    composeOptions {
+        def kotlin_compiler_version = "1.7.0"
+        kotlinCompilerVersion kotlin_compiler_version
+
+        def kotlin_compiler_extension_version = "1.2.0"
+        kotlinCompilerExtensionVersion kotlin_compiler_extension_version
+    }
+    kapt {
+        correctErrorTypes = true
+    }
+    buildFeatures {
+        compose true
     }
 }
 
@@ -34,16 +49,46 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-rc02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    def app_compat = "1.2.0"
+    def app_compat = "1.3.1"
     implementation "androidx.appcompat:appcompat:$app_compat"
 
     def material = "1.2.1"
     implementation "com.google.android.material:material:$material"
 
-    def constraint_layout = "2.0.4"
-    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout"
+    def constraint_layout = "2.1.4"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta02"
 
+    def androidx_ui = "1.0.0-alpha07"
+    implementation "androidx.ui:ui-tooling:$androidx_ui"
+
+    def compose = "1.1.1"
+    implementation "androidx.compose.ui:ui:$compose"
+    implementation "androidx.compose.foundation:foundation:$compose"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose"
+    implementation "androidx.compose.runtime:runtime-rxjava2:$compose"
+    implementation "androidx.compose.material:material:$compose"
+    implementation "androidx.compose.material:material-icons-core:$compose"
+    implementation "androidx.compose.material:material-icons-extended:$compose"
+
+    def nav_version = "2.3.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    def retrofit = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+
+
+    def glide = "4.11.0"
+    implementation "com.github.bumptech.glide:glide:$glide"
+    kapt "com.github.bumptech.glide:compiler:$glide"
 }
 
 
