--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.20"
+    ext.kotlin_version = "1.7.0"
+    ext.hilt_version = "2.42"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        def gradle = "4.2.0-alpha15"
+        def gradle = '7.1.2'
         classpath "com.android.tools.build:gradle:$gradle"
 
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
