--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@
 kotlin.code.style=official
 #org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 android.useAndroidX=true
+org.gradle.jvmargs=-XX\:MaxHeapSize\=1024m -Xmx1024m
